BEM хедер+герой

--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 </head>
 <body>
 <header class="header">
-<div class="container home-page">
+<div class="container">
         <nav class="navigation">
             <a class="logo link" href="#" lang="en">
-                Web<span class="logo-part-black">Studio</span>
+                Web<span class="logo__part--black">Studio</span>
             </a>
-            <ul class="navigation-list">
-                <li class=" navigation-item list">
-                    <a class="navigation-link link current" href="./index.html">Студия</a>
+            <ul class="navigation__list">
+                <li class=" navigation__item list">
+                    <a class="navigation__link navigation__link--current link" href="./index.html">Студия</a>
                 </li>
-                <li class=" navigation-item list">
-                    <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
+                <li class=" navigation__item list">
+                    <a class="navigation__link link" href="./portfolio.html">Портфолио</a>
                 </li>
-                <li class=" navigation-item list">
-                    <a class="navigation-link link" href="#">Контакты</a>
+                <li class=" navigation__item list">
+                    <a class="navigation__link link" href="#">Контакты</a>
                 </li>
             </ul>
         </nav>
         <ul class="contact">
-            <li class="contact-list list">                
-                <a class="contact-link link" href="mailto:info@devstudio.com">
-                    <svg class="contact-list-svg" width ="16" height="12">
+            <li class="contact__list list">                
+                <a class="contact__link link" href="mailto:info@devstudio.com">
+                    <svg class="contact__svg" width ="16" height="12">
                         <use href="./images/icons/sprite.svg#icon-mail"></use>
                     </svg>
                  info@devstudio.com
                 </a>
             </li>
-            <li class="contact-list list">
-                <a class="contact-link link" href="tel:+380961111111">
-                    <svg class="contact-list-svg" width="10" height="16">
+            <li class="contact__list list">
+                <a class="contact__link link" href="tel:+380961111111">
+                    <svg class="contact__svg" width="10" height="16">
                         <use href="./images/icons/sprite.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11</a>
@@ -53,79 +53,79 @@
 </header>   
 <main>
 <!-- HERO -->
-    <section class="hero">
-        <div class="container container-hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+    <section class="section section--central">
+        <div class="container container--central">
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button class="modal-button" type="button" data-modal-open>Заказать услугу</button>
-        </div>
+        </div> 
 </section>
 <!-- advantage -->
-    <section class="advantage">
+    <section class="section">
         <div class="container">
-        <h2 class="visually-hidden">Преимущества</h2>      
-            <ul class="advantage-list">
-                <li class="advantage-item list icon-antena">
-                    <div class="advantage-container-svg">
-                    <svg class="advantage-svg" width="65" height="70">
+        <h2 class="section__title--hidden">Преимущества</h2>      
+            <ul class="advantage__list">
+                <li class="advantage__item list">
+                    <div class="advantage__container">
+                    <svg class="advantage__svg" width="65" height="70">
                         <use href="./images/icons/sprite.svg#icon-antenna"></use>
                     </svg>
                     </div>
-                    <h3 class="advantage-item-title">Внимание к деталям</h3>
-                    <p class="advantage-item-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="advantage__title">Внимание к деталям</h3>
+                    <p class="advantage__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="advantage-item list icon-clock">
-                    <div class="advantage-container-svg">
-                        <svg class="advantage-svg" width="65" height="70">
+                <li class="advantage__item list">
+                    <div class="advantage__container">
+                        <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-clock"></use>
                         </svg>
                     </div>
-                    <h3 class="advantage-item-title">Пунктуальность</h3>
-                    <p class="advantage-item-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="advantage__title">Пунктуальность</h3>
+                    <p class="advantage__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="advantage-item list icon-diagram">
-                    <div class="advantage-container-svg">
-                        <svg class="advantage-svg" width="65" height="70">
+                <li class="advantage__item list">
+                    <div class="advantage__container">
+                        <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-diagram"></use>
                         </svg>
                     </div>
-                    <h3 class="advantage-item-title">Планирование</h3>
-                    <p class="advantage-item-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="advantage__title">Планирование</h3>
+                    <p class="advantage__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="advantage-item list icon-astronaut">
-                    <div class="advantage-container-svg">
-                        <svg class="advantage-svg" width="65" height="70">
+                <li class="advantage__item list">
+                    <div class="advantage__container">
+                        <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-astronaut"></use>
                         </svg>
                     </div>
-                    <h3 class="advantage-item-title">Современные технологии</h3>
-                    <p class="advantage-item-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="advantage__title">Современные технологии</h3>
+                    <p class="advantage__description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
             </div>
             </section>
     <!-- whatWeDo -->
-    <section class="whatWeDo"> 
+    <section class="section"> 
         <div class="container">
-                        <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="whatWeDo-list">
-                <li class="whatWeDo-item list">
-                    <div class="whatWeDo-container">
+                        <h2 class="section__title">Чем мы занимаемся</h2>
+            <ul class="whatWeDo__list">
+                <li class="whatWeDo__item list">
+                    <div class="whatWeDo__container">
                         <img class="whatWeDo-img" src="./images/about/whatWeDo_img_3.jpg" alt="Сотрудник работает на компьютере">
                         <div class="boxCaption">
                             <p class="whatWeDo-cardCaption">Десктопные приложения</p>
                         </div>                    
                     </div>
                 </li>
-                <li class="whatWeDo-item list">
-                    <div class="whatWeDo-container">
+                <li class="whatWeDo__item list">
+                    <div class="whatWeDo__container">
                         <img class="whatWeDo-img" src="./images/about/whatWeDo_img_1.jpg" alt="Девушка работает над мобильным приложением">
                         <div class="boxCaption">
                             <p class="whatWeDo-cardCaption">Мобильные приложения</p>
                         </div> 
                     </div>
                 </li>
-                <li class="whatWeDo-item list">
-                    <div class="whatWeDo-container">
+                <li class="whatWeDo__item list">
+                    <div class="whatWeDo__container">
                         <img class="whatWeDo-img" src="./images/about/whatWeDo_img_2.jpg" alt="Девушка работает с цветовой палитрой">
                         <div class="boxCaption">
                             <p class="whatWeDo-cardCaption">Дизайнерские решения</p>
@@ -138,7 +138,7 @@
     <!-- OurTeam -->
     <section class="ourTeam">
         <div class="container">
-           <h2 class="section-title">Наша команда</h2>
+           <h2 class="section__title">Наша команда</h2>
        <ul class="ourTeam-list">
            <li class="ourTeam-link list">
                <img class="ourTeam-link-img" src="./images/team/team_img_1.jpg" alt="Фото сотрудника">
@@ -310,7 +310,7 @@
     <!-- Clients -->
     <section class="clients">
         <div class="container container-clients">
-            <h2 class="section-title">Постоянные клиенты</h2>
+            <h2 class="section__title">Постоянные клиенты</h2>
             <ul class="list clients-logo-list">
                 <li class="link clients-logo-link" >
                     <a class="item clients-logo-item" href="#">
