--- a/portfolio.html
+++ b/portfolio.html
@@ -16,34 +16,34 @@
 <body>
     <header class="header">
         <div class="container navigation-portfolio">
-                <nav class="navigation">
-                    <a class="logo link" href="#" lang="en">
-                        Web<span class="logo-part-black">Studio</span>
-                    </a>
-                    <ul class="navigation-list">
-                        <li class=" navigation-item list">
-                            <a class="navigation-link link" href="./index.html">Студия</a>
-                        </li>
-                        <li class=" navigation-item list">
-                            <a class="navigation-link link current" href="./portfolio.html">Портфолио</a>
-                        </li>
-                        <li class=" navigation-item list">
-                            <a class="navigation-link link" href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
-                        <ul class="contact">
-            <li class="contact-list list">                
-                <a class="contact-link link" href="mailto:info@devstudio.com">
-                    <svg class="contact-list-svg" width ="16" height="12">
+            <nav class="navigation">
+                <a class="logo link" href="#" lang="en">
+                    Web<span class="logo__part--black">Studio</span>
+                </a>
+                <ul class="navigation__list">
+                    <li class=" navigation__item list">
+                        <a class="navigation__link link" href="./index.html">Студия</a>
+                    </li>
+                    <li class=" navigation__item list">
+                        <a class="navigation__link navigation__link--current link" href="./portfolio.html">Портфолио</a>
+                    </li>
+                    <li class=" navigation__item list">
+                        <a class="navigation__link link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="contact">
+            <li class="contact__list list">                
+                <a class="contact__link link" href="mailto:info@devstudio.com">
+                    <svg class="contact__svg" width ="16" height="12">
                         <use href="./images/icons/sprite.svg#icon-mail"></use>
                     </svg>
                  info@devstudio.com
                 </a>
             </li>
-            <li class="contact-list list">
-                <a class="contact-link link" href="tel:+380961111111">
-                    <svg class="contact-list-svg" width="10" height="16">
+            <li class="contact__list list">
+                <a class="contact__link link" href="tel:+380961111111">
+                    <svg class="contact__svg" width="10" height="16">
                         <use href="./images/icons/sprite.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11</a>
