--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 </header>   
 <main>
 <!-- HERO -->
-    <section class="section section--central">
-        <div class="container container--central">
-        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+    <section class="section section--general">
+        <div class="container container--general">
+        <h1 class="section__title--general">Эффективные решения для вашего бизнеса</h1>
         <button class="button" type="button" data-modal-open>Заказать услугу</button>
         </div> 
 </section>
