--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
         </ul>
 
         <ul class="ourWorks__cards">
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork " href="№">
                    <div class="card__wrapper">
                        <img class="card__img" src="./images/portfolio/portfolio-img1.jpg" alt="Монитор ноутбука">
@@ -88,7 +88,7 @@
                     </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img2.jpg" alt="Два баскетболиста">
@@ -102,7 +102,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img3.jpg" alt="Логотип ресторана">
@@ -116,7 +116,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img4.jpg" alt="Наушники">
@@ -130,7 +130,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img5.jpg" alt="Две коробки">
@@ -144,7 +144,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img6.jpg" alt="Монитор">
@@ -158,7 +158,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img7.jpg" alt="Разворот книги">
@@ -172,7 +172,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img8.jpg" alt="Бирка с названием проэкта">
@@ -186,7 +186,7 @@
                 </div>
             </a>
             </li>
-            <li class="ourWorks-card list">
+            <li class="ourWorks__card list">
                 <a class="link ourWork" href="#">
                     <div class="card__wrapper">
                     <img class="card__img" src="./images/portfolio/portfolio-img9.jpg" alt="Ноутбук">
