--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" />
     
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
 <header class="header">
@@ -461,7 +461,7 @@
                      
                 <label for="comment" class="modal__field">
                     <span class="modal__coment">Комментарий</span>
-                    <textarea name="comment" placeholder="Введите текст" id="comment"></textarea>
+                    <textarea name="comment" placeholder="Введите текст" id="comment" class="modal__textarea"></textarea>
                </label>
 
             <label class="policy">
