--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="title visually-hidden">Преимущества</h2>      
             <ul class="advantage__list list">
                 <li class="advantage__item">
-                    <div class="advantage__container">
+                    <div class="advantage__box">
                     <svg class="advantage__svg" width="65" height="70">
                         <use href="./images/icons/sprite.svg#icon-antenna"></use>
                     </svg>
@@ -74,7 +74,7 @@
                     <p class="advantage__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="advantage__item">
-                    <div class="advantage__container">
+                    <div class="advantage__box">
                         <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-clock"></use>
                         </svg>
@@ -83,7 +83,7 @@
                     <p class="advantage__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="advantage__item">
-                    <div class="advantage__container">
+                    <div class="advantage__box">
                         <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-diagram"></use>
                         </svg>
@@ -92,7 +92,7 @@
                     <p class="advantage__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="advantage__item">
-                    <div class="advantage__container">
+                    <div class="advantage__box">
                         <svg class="advantage__svg" width="65" height="70">
                             <use href="./images/icons/sprite.svg#icon-astronaut"></use>
                         </svg>
