--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <button class="button" type="button" data-modal-open>Заказать услугу</button>
         </div> 
 </section>
-<!-- advantage -->
+<!-- ADVANTAGE -->
     <section class="advantage">
         <div class="container">
         <h2 class="title visually-hidden">Преимущества</h2>      
@@ -135,7 +135,7 @@
             </ul>
         </div>
     </section>
-    <!-- team -->
+    <!-- TEAM -->
     <section class="team">
         <div class="team__container container">
            <h2 class="title">Наша команда</h2>
@@ -307,7 +307,7 @@
        </ul>
         </div>
     </section>
-    <!-- Clients -->
+    <!-- CLIENTS -->
     <section class="clients">
         <div class="container">
             <h2 class="title">Постоянные клиенты</h2>
